# mstar

./: .gitignore  pyproject.toml
app/: main.py
app/ToT/: __init__.py  tot.py
app/agent/: __init__.py  agent.py  event.py  exec.py  graph.py  parser.py  react.py  register.py
app/agent/schema/: __init__.py  joiner.py
app/settings/: __init__.py
app/tools/: __init__.py  append_file.py  bash.py  create_agent.py  create_coder.py  instruct_agent.py  join.py  python.py  read_file.py  search_internet.py  write_file.py
app/tools/utils/: tools.py
app/utils/: __init__.py  chat.py  llm.py  message.py
